@@ -30,6 +30,9 @@ common.TiberiumRadius = settings.startup["tiberium-radius"].value
 
 common.TiberiumInStartingArea = settings.startup["tiberium-starting-area"].value or settings.startup["tiberium-ore-removal"].value or false
 
+--Need to force burner tier for tiberium only starts to avoid softlocks
+common.tierZero = settings.startup["tiberium-tier-zero"].value or (settings.startup["tiberium-on"].value == "pure-nauvis") or (settings.startup["tiberium-on"].value == "tiber-start")
+
 common.hit_effects = require("__base__.prototypes.entity.hit-effects")
 
 common.sounds = require("__base__.prototypes.entity.sounds")
