@@ -11,6 +11,8 @@ Version: 2.0.3
     - Reorganized settings menu, check your mod settings to sure they still have the values that you want
     - Changed Tiberium Slurry Centrifuging to unlock when you craft Tiberium Slurry instead of Water (oops)
     - Corrected Tiberium refining recipes to reflect the new water-to-steam ratio in Factorio 2.0
+    - Made Tiberium Centrifuges immune to damage from Tiberium growing so you can now safely place them on Tiberium Ore
+    - Tiberium Burner Centrifuge recipes now takes half as many gears and are always enabled for Tiberium-only starts
     - Transmutation recipes for ores from other planets now require science packs from those planets to unlock and can only be produced on their planets of origin (both of these can be turned off with settings)
   Features:
     - Added new Tiberium on All Planets setting to enable Tiberium naturally spawning on all planets
